# mcserial

./: .gitignore  README.md  applications.md  constructionCSV.py  debug2.py  duplicateur.py  example.ipynb  file.csv  impression3D.py  minecraftBuild.py  no_refresh.ipynb  no_refresh.py  npy.ipynb  pyproject.toml  scannage3D.py  setup.py  usage.ipynb
mcserial/: __init__.py  mcserial.py  utils.py
sandbox/: 4d_array.npy  array.npy  debug.py  hello.ipynb  no_refresh.ipynb  no_refresh_get.ipynb  npy-subclass.ipynb  npy.ipynb  timer.ipynb
